RESOLVED FIXED194301
Reproducible crash under WKShareSheet presentWithParameters when cancelling a share
https://bugs.webkit.org/show_bug.cgi?id=194301
Summary Reproducible crash under WKShareSheet presentWithParameters when cancelling a...
Tim Horton
Reported 2019-02-05 14:11:33 PST
Created attachment 361220 [details] patch Reproducible crash under WKShareSheet presentWithParameters when cancelling a share <rdar://problem/47719379>
Attachments
patch (2.06 KB, patch)
2019-02-05 14:11 PST, Tim Horton
bdakin: review+
thorton: commit-queue-
for cq (2.10 KB, patch)
2019-02-05 14:24 PST, Tim Horton
no flags
EWS Watchlist
Comment 1 2019-02-05 14:17:36 PST
Attachment 361220 [details] did not pass style-queue: ERROR: Source/WebKit/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 2 2019-02-05 14:24:02 PST
WebKit Commit Bot
Comment 3 2019-02-05 15:01:10 PST
Comment on attachment 361221 [details] for cq Clearing flags on attachment: 361221 Committed r240995: <https://trac.webkit.org/changeset/240995>
WebKit Commit Bot
Comment 4 2019-02-05 15:01:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.